--- a/SomeWebApp/SomeWebApp/HtmlPage1.html
+++ b/SomeWebApp/SomeWebApp/HtmlPage1.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     This is some web app!
-    It does something!
+    It does something!</br> WITH SOMETHING ELSE!
 </body>
 </html>
